# sleek-py

./: Makefile  README.md  main.py  pyproject.toml  requirements.txt
examples/: basic_server.py
src/sleek_py/: __init__.py  server.py
tests/: __init__.py  test_server.py
