[project]
name = "sleek-py"
version = "0.1.0"
description = "Python bindings for Sleek"
authors = [
    {name = "Vidur Khanal", email = "vidurkhanal@gmail.com"},
]
dependencies = []
requires-python = ">=3.12"
readme = "README.md"
license = {text = "Apache-2.0"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.3.2",
]
